--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         
         <div class="guest">
-        <h1>GUEST</h1>
+        <h1>AWAY</h1>
         <h2 id="guestScore">0</h2>
           <div class ="guestScore">
             <button onclick="guestScore1()">+1</button>
